--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-image: node:8.12.0
+image: node:12.14.0
 
 pipelines:
   default:
@@ -8,7 +8,7 @@ pipelines:
         caches:
           - node
         script:
-          - npm i
+          - npm ci
           - npm run build
           - npm run test:remote
         services:
@@ -21,7 +21,7 @@ pipelines:
           caches:
             - node
           script:
-            - npm i
+            - npm ci
             - npm run build
           services:
             - postgres
@@ -40,8 +40,6 @@ pipelines:
             - redis
       - step:
           name: Staging DEPLOY
-          caches:
-            - node
           deployment: staging
           script:
             - cd heroku
@@ -66,17 +64,51 @@ pipelines:
             - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$STAGING_APP_NAME.git -f HEAD:master
     master:
       - step:
-          name: Tests one more time before deploy
-          deployment: production
+          name: Production build
           caches:
             - node
           script:
-            - npm i
+            - npm ci
             - npm run build
+          services:
+            - postgres
+            - redis
+          artifacts: # defining the artifacts to be passed to each future step.
+            - dist/**
+            - node_modules/**
+      - step:
+          name: Production tests
+          caches:
+            - node
+          script:
             - npm run test:remote
           services:
             - postgres
             - redis
+      - step:
+          name: Production DEPLOY
+          deployment: production
+          script:
+            - cd heroku
+            - rm -rf bin
+            - rm -rf dist
+            - rm -rf .git
+            - rm -rf mails
+            - rm -rf package.json
+            - rm -rf package-lock.json
+            - cp -r ../bin ./bin
+            - cp -r ../dist ./dist
+            - cp -r ../mails ./mails
+            - cp ../ormconfig.js ./ormconfig.js
+            - cp ../package.json ./package.json
+            - sed "s/rm -rf dist && tsc/echo NO NEED BUILD PREFERATION/" -i package.json
+            - cp ../package-lock.json ./package-lock.json
+            - git init
+            - git add .
+            - git config user.email "razvanlomov@gmail.com"
+            - git config user.name "bitbucket-pipelines"
+            - git commit -m 'dynamic version'
+            - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$PRODUCTION_APP_NAME.git -f HEAD:master
 
 definitions:
   services:
